# geocr-py

./: README.md  pyproject.toml
geocr/: __init__.py  archive_collection.py  archive_geolocator.py  archive_image.py  geo_exporter.py
