[project]
name = "geocr"
version = "1.0.0"
description = "GeOCR is a Python library for OCR, data cleaning, and historical geocoding using custom GeoJSON maps."
authors = [{ name="Joshua Vachon"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
  "opencv-python-headless ^4.11",
  "numpy ^2.0",
  "matplotlib ^3.10",
  "pytesseract ^0.3",
  "pillow ^11.2",
  "ipython ^8.0",
  "pandas ^2.2",
  "geopandas ^1.0",
  "shapely ^2.1",
  "rapidfuzz ^3.13"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["geocr"]

[tool.setuptools.package-data]
"geocr" = ["*.py"]